# planner-matricula-cin

./: .gitignore  README.md  disciplinas-2025-1.csv  disciplinas-2025-1.jsonl  disciplinas-2025-2.jsonl  disciplinas.csv  disciplinas.jsonl  planner.py  pyproject.toml  requirements.txt
planner/: __init__.py  cli.py  display.py  downloader.py  formatter.py  models.py  scheduler.py
tests/: test_formatter.py  test_scheduler.py
