[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planner-matricula-cin"
version = "2.0.0"
description = "A CLI tool for planning course schedules."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }

dependencies = [
    "colorama==0.4.6",
    "tabulate==0.9.0",
    "requests==2.32.5",
]

[project.scripts]
planner = "planner.cli:main"
